log
Thu 09 May 2024 09:58:39 PM UTC: 
 tests:  0|5
total_score: 0/70
f1b9778
Sat 11 May 2024 05:53:06 PM UTC: 
 sudoku.c | 22 +++++++++++++++++++++-
 1 file changed, 21 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
8f3bc0c
Sat 11 May 2024 07:35:20 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
sudoku.c: In function ‘is_final’:
sudoku.c:79:8: error: unused variable ‘arr’ [-Werror=unused-variable]
   79 |    int arr[10] = {0};
      |        ^~~
cc1: all warnings being treated as errors
Compilation failed
ed13ccd
Sat 11 May 2024 07:46:35 PM UTC: 
 sudoku.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
0ad0337
Sat 11 May 2024 07:51:20 PM UTC: 
 sudoku.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
8153f09
Sat 11 May 2024 07:51:39 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
aea04aa
Sat 11 May 2024 07:52:12 PM UTC: 
 sudoku.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  2|4
total_score: 15/70
001ae45
Sat 11 May 2024 07:53:11 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
b7771f3
Sat 11 May 2024 07:55:11 PM UTC: 
 sudoku.c | 14 --------------
 1 file changed, 14 deletions(-)
test.c: In function ‘is_valid’:
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
test.c:263: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
fc9b686
Sat 11 May 2024 07:55:17 PM UTC: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:48:1: error: control reaches end of non-void function [-Werror=return-type]
   48 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
9b69785
Sat 11 May 2024 07:55:26 PM UTC: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  2|4
total_score: 15/70
febaf1e
Sat 11 May 2024 07:56:10 PM UTC: 
 sudoku.c | 16 ++++++++++++++--
 1 file changed, 14 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
34aaa93
Sat 11 May 2024 07:58:05 PM UTC: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  2|4
total_score: 15/70
84ce460
Sat 11 May 2024 08:00:22 PM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
d44a6c1
Sat 11 May 2024 08:00:54 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
c101eae
Sat 11 May 2024 08:01:07 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
269134a
Sat 11 May 2024 08:01:18 PM UTC: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
884648e
Sat 11 May 2024 08:12:22 PM UTC: 
 sudoku.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
 tests:  2|4
total_score: 15/70
29efa7e
Sat 11 May 2024 08:12:34 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
a346c9a
Sat 11 May 2024 08:31:30 PM UTC: 
 sudoku.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  2|4
total_score: 15/70
ba18ed8
Sat 11 May 2024 08:32:37 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|4
total_score: 15/70
0bf70a2
Sat 11 May 2024 08:36:06 PM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
a923816
Sat 11 May 2024 08:39:06 PM UTC: 
 sudoku.c | 13 ++++++++++---
 1 file changed, 10 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
af5fa64
Sat 11 May 2024 08:39:32 PM UTC: 
 sudoku.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
 tests:  2|4
total_score: 15/70
500b342
Sat 11 May 2024 08:40:28 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
fc45e68
Sat 11 May 2024 08:40:54 PM UTC: 
 sudoku.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
 tests:  2|4
total_score: 15/70
63cb3eb
